# ply2stl

./: CMakeLists.txt  README.md  ply2stl.cpp  ply2stl.h.in
